[tool.poetry]
name = "model-versioning-demo"
version = "0.1.0"
description = ""
authors = ["Ilya Azerkovich <azilya@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
nltk = "^3.8.1"
tqdm = "^4.66.1"
pymongo = "^4.5.0"
transformers = "^4.30.2"
numpy = "^1.26.0"
datasets = "^2.14.5"
evaluate = "^0.4.0"
scipy = "^1.11.2"
scikit-learn = "^1.3.1"
mlflow = "^2.7.1"
torch = ">=1.11.0,<1.12.0"
pytorch-crf = "0.7.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
flake8-bandit = "^4.1.1"
flake8-isort = "^6.1.0"
flake8-pyproject = "^1.2.3"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E501", "W503", "E203"]
select = ["C", "E", "F", "W", "W504"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
